# danny_learns_dihiggs

./: .gitignore  README.md  calc_ul_den.py  dump_scores.py  hack_steps.txt  plot_2Dnn.py  plot_discriminants.py  plot_nn.py  plot_z.py  pop_scales.py  preprocess.py  roc_nn_and_cut.py  run_preprocess.sh  setup.sh  train.py  validation.py  wwbb_callbacks.py  wwbb_models.py
CMSCOMP/: compare_strategy.py
OVERTRAINCHECK/: plot_histories.py  plot_kfold_histories.py  plot_outputs.py
analyze/: acc_and_eff.py  cutbased.py  dump_acceptance.py  dump_s95.py  dump_xsec_upperlimits.py  hh_acceptance.py  overlay_nn.py  roc_nn_and_cut.py  significance.py
attic/: calc_ul_den.py  plot_input_v_output.py  validation.py
attic/CMSCOMP/: compare_strategy.py
attic/JAN13_ETASTUDIES/: compare_nn.py
attic/analyze/: cutbased.py  dump_acceptance.py  dump_xsec_upperlimits.py  get_den.py
cpp/: CMakeLists.txt
cpp/util/: wwbb_hack.cxx
feature_lists/: feature_list.txt
filelists/: filelist.txt  filelist_afs.txt  filelist_bfg.txt
